docs/7.53/md/abenddicddl_define_table_comps.md
---
title: "DEFINE TABLE - field"
description: |
  Syntax component_annos foreign_key_annos(https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddicddl_define_table_fkprps.htm) KEY field : data_element foreign_key(https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddicddl_define_table_fo
version: "7.53"
category: "data-structures"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddicddl_define_table_comps.htm"
abapFile: "abenddicddl_define_table_comps.htm"
keywords: ["do", "if", "try", "class", "data", "types", "abenddicddl", "define", "table", "comps"]
---

* * *

AS ABAP Release 753, ©Copyright 2019 SAP AG. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap.htm) →  [ABAP - Dictionary](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap_dictionary.htm) →  [Classic Objects in ABAP Dictionary](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddic_classical_objects.htm) →  [Database Tables](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddic_database_tables.htm) →  [Dictionary DDL for Defining Database Tables](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddic_define_table.htm) →  [DEFINE TABLE](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddicddl_define_table.htm) → 

DEFINE TABLE - field

Syntax

*\[*component\_annos*\]*
*\[*[foreign\_key\_annos](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddicddl_define_table_fkprps.htm)*\]*
*\[*KEY*\]* field : *{*data\_element *\[*[foreign\_key](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddicddl_define_table_forkey.htm)*\]*
                            *\[*[value\_help](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddicddl_define_struct_valuhelp.htm)*\]**}*
              *|*abap. [type](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddic_builtin_types.htm)*\[*(n)*|*(n,m)*\]*
              *\[*NOT NULL*\]*;

Effect

Defines a single [database field](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddic_database_tables_techstruc.htm) in the definition of a database table using the [Dictionary DDL](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abendictionary_ddl_glosry.htm "Glossary Entry") statement [DEFINE TABLE](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddicddl_define_table.htm).

-   In front of the field, annotations [component\_annos](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddicddl_define_struct_cmpprps.htm) can be used to specify the same optional component properties as in the definition of a structure using [DEFINE STRUCTURE](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddicddl_define_structure.htm).

-   [foreign\_key\_annos](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddicddl_define_table_fkprps.htm) can be used to specify the properties of a foreign key dependency defined with [foreign\_key](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddicddl_define_table_forkey.htm).

-   The addition KEY defines the table field as a [key field](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddic_database_tables_key.htm).

-   field indicates the name of the database field.

-   data\_element or abap.type is used to define the data type of the table field. The same rules apply as in the definition of a [structure component](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddicddl_define_struct_comps.htm), except that only elementary types can be specified here.

-   The addition NOT NULL is used to set the [flag for initial values](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddic_database_tables_init.htm).

-   The addition [foreign\_key](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddicddl_define_table_forkey.htm) can be used to define a [foreign key dependency](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddic_database_tables_forkeyrel.htm) for a table field whose data type is defined using a data element.

-   The addition [value\_help](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddicddl_define_struct_valuhelp.htm) can be used to assign a search help to a table field whose data type is defined using a data element. This is only applicable to table fields used for input fields of dynpros or Web Dynpros (which is not recommended) and the same applies as in the definition of a [structure component](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddicddl_define_struct_comps.htm).

Example

Defines the database table DEMO\_EXPRESSIONS in the [Dictionary DDL](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abendictionary_ddl_glosry.htm "Glossary Entry") of the [ABAP Development Tools](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenadt_glosry.htm "Glossary Entry"). The types of all fields are determined directly using built-in data types in ABAP Dictionary.

@EndUserText.label : 'Database Table for Expression Examples'
@AbapCatalog.enhancementCategory : #NOT\_EXTENSIBLE
@AbapCatalog.tableCategory : #TRANSPARENT
@AbapCatalog.deliveryClass : #A
@AbapCatalog.dataMaintenance : #ALLOWED
define table demo\_expressions {
  key mandt  : mandt not null;
  key id     : char1 not null;
  num1       : abap.int4;
  num2       : abap.int4;
  numlong1   : abap.int8;
  numlong2   : abap.int8;
  dec1       : abap.dec(31,0);
  dec2       : abap.dec(31,10);
  dec3       : abap.dec(10,3);
  fltp1      : abap.fltp;
  fltp2      : abap.fltp;
  decf1      : abap.df34\_dec(31,0);
  decf2      : abap.df34\_dec(31,0);
  char1      : abap.char(10);
  char2      : abap.char(10);
  numc1      : abap.numc(10);
  numc2      : abap.numc(10);
  string1    : abap.string(0);
  string2    : abap.string(0);
  raw1       : abap.raw(10);
  raw2       : abap.raw(10);
  xstring1   : abap.rawstring(0);
  xstring2   : abap.rawstring(0);
  dats1      : abap.dats;
  dats2      : abap.dats;
  tims1      : abap.tims;
  tims2      : abap.tims;
  timestamp1 : abap.dec(15,0);
  timestamp2 : abap.dec(15,0); }

Continue
[DEFINE TABLE - foreign\_key\_annos](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddicddl_define_table_fkprps.htm)
[DEFINE TABLE - foreign\_key](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddicddl_define_table_forkey.htm)